# sfmt

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml  ci.sh  search-index.js
.github/workflows/: rust.yml
benches/: rand_gen.rs
check/: .gitignore  Makefile  SFMT_19937.txt  check.sh  init.c  mm_recursion.c  mm_recursion.txt  sample.cpp  u64_11213.txt  u64_1279.txt  u64_132049.txt  u64_19937.txt  u64_216091.txt  u64_2281.txt  u64_4253.txt  u64_44497.txt  u64_607.txt  u64_86243.txt
ci/: job.yml
implementors/core/clone/: trait.Clone.js
implementors/core/marker/: trait.Send.js  trait.Sync.js
implementors/rand/: trait.Rng.js
rsfmt/: Cargo.toml  init1234.txt
rsfmt/benches/: rand_gen.rs
rsfmt/check/: init.c  mm_recursion.c
rsfmt/src/: lib.rs  sfmt.rs
rsfmt/tests/: sfmt.rs
sfmt/: SFMT.t.html  all.html  fn.thread_rng.html  index.html  sidebar-items.js  struct.SFMT.html  struct.ThreadRng.html
sfmt-sys/: Cargo.toml  build.rs
sfmt-sys/src/: lib.rs
sfmt/thread_rng/: fn.thread_rng.html  struct.ThreadRng.html
src/: lib.rs  packed.rs  sfmt.rs  thread_rng.rs
src/sfmt/: lib.rs.html  sfmt.rs.html  thread_rng.rs.html
tests/: sfmt.rs  thread_rng.rs
