[package]
name = "sfmt"
version = "0.5.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description = "Rust implementation of SIMD-oriented Fast Mersenne Twister (SFMT)"
documentation = "https://docs.rs/sfmt/"
repository = "https://github.com/termoshtt/rust-sfmt"
keywords = ["random", "rng"]
categories = ["algorithms"]
license = "MIT"

[dependencies]
rand = "0.6"
rand_core = "0.3"
