[package]
name = "sfmt"
version = "0.6.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description = "Rust implementation of SIMD-oriented Fast Mersenne Twister (SFMT)"
documentation = "https://docs.rs/sfmt/"
repository = "https://github.com/termoshtt/rust-sfmt"
keywords = ["random", "rng"]
categories = ["algorithms"]
license = "MIT"

[features]
default = ["thread_rng"]

# The thread_rng feature requires the rand dependency
thread_rng = ["rand/getrandom"]

[dependencies]
rand_core = "0.6"
rand = {version = "0.8", optional = true}

[dev-dependencies]
rand_xorshift = "0.3.0"
rand_core = {version = "0.6", features=["getrandom"]}